re-implementing z-index solution, since appending to main has it's own set of issues

--- a/express/code/blocks/faqv2/faqv2.css
+++ b/express/code/blocks/faqv2/faqv2.css
@@ -1,7 +1,6 @@
 .faqv2 {
   --color-light-grey: #717171;
   position: relative;
-  z-index: 1;
   height: auto;
 }
 
